<resources>
    <string name="app_name">琴家曲谱馆</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>x
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="demonstration">示范</string>
    <string name="practice">练习</string>
    <string name="projectile">弹对前进</string>
    <string name="last_section">上一小节</string>
    <string name="next_measure">下一小节</string>
    <string name="previous_line">上一行</string>
    <string name="next_row">下一行</string>
    <string name="play_speed">变速</string>
    <string name="accompaniment">伴奏</string>
    <string name="restart">重新开始</string>
    <string name="metronome">节拍器</string>
    <string name="waterfall_flow">瀑布流</string>

    <string name="start_topmeasure">目前已经到第一小节</string>
    <string name="start_toprow">目前已经到第一行</string>
    <string name="start_bottommeasure">目前已经到最后一小节</string>
    <string name="start_bottomrow">目前已经到最后一行</string>

    <string name="yuansu">1.0X</string>
    <string name="mansu">0.8X</string>
    <string name="chaomansu">0.6X</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="next_knowledge">学习下一个知识点</string>
    <string name="last_knowledge">重温上一个知识点</string>
    <string name="go_practice">本知识点习题</string>
    <string name="return_knowledge_point">返回知识点</string>
    <string name="all_practice">全部习题</string>
    <string name="Prompt">提示</string>
    <string name="Confirm">确定</string>
    <string name="login_title">登录</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_verification_code">请输入验证码</string>
    <string name="login_send">发送验证码</string>
    <string name="errorEnterEmailOrPhoneNumber">请输入手机号码</string>
    <string name="errorWrongEmailOrPhoneNumber">请输入正确手机号码</string>
    <string name="Confirm_login">确认登录</string>
    <string name="notCode">验证码不能为空</string>
    <string name="cancel">取消</string>
    <string name="discovery_update">发现更新</string>
    <string name="connect">连接</string>

    <string name="usbConnect">已连接USB</string>
    <string name="usbDisConnect">未连接USB</string>
    <string name="blueConnect">已连接蓝牙</string>
    <string name="blueDisConnect">未连接蓝牙</string>

    <string name="usbStatusConnect">如需连接蓝牙请先断开USB连接</string>
</resources>
