<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="40px"
    >
    <RelativeLayout
        android:id="@+id/practice1LayoutPracticeRl"
        android:layout_width="150px"
        android:layout_height="30px"
        android:layout_alignParentBottom="true"
        android:background="@drawable/relatertextview_bg"
        >
        <ImageView
            android:id="@+id/practice1LayoutPracticeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return_knowledge"
            android:layout_marginLeft="6px"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/return_knowledge_point"
            android:layout_toRightOf="@id/practice1LayoutPracticeImageView"
            android:layout_marginLeft="16px"
            android:textSize="16px"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/practice1LayoutPracticeTextView"
        android:layout_width="84px"
        android:layout_height="30px"
        android:background="@drawable/textview_green_bg"
        android:text="@string/Prompt"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="297px"
        />
    <TextView
        android:id="@+id/practice1LayoutOkTextView"
        android:layout_width="156px"
        android:layout_height="54px"
        android:textColor="@color/white"
        android:textSize="24px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="434px"
        android:gravity="center"
        android:text="@string/Confirm"
        android:background="@drawable/textview_bg"
        />
    <RelativeLayout
        android:id="@+id/practiceCancelRl"
        android:layout_width="84px"
        android:layout_height="30px"
        android:background="@drawable/textview_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="643px"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
</RelativeLayout>