<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/course1LayoutLastKnowledgeRl"
        android:layout_width="101px"
        android:layout_height="60px"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="424px"
        android:layout_marginLeft="10px"
        android:background="@drawable/textview_bg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="4"
            android:gravity="center"
            android:textSize="16px"
            android:textColor="@color/white"
            android:text="@string/last_knowledge"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/course1LayoutNextKnowledgeRl"
        android:layout_width="101px"
        android:layout_height="60px"
        android:layout_alignParentRight="true"
        android:layout_marginTop="424px"
        android:layout_marginRight="10px"
        android:background="@drawable/textview_bg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="4"
            android:gravity="center"
            android:textSize="16px"
            android:textColor="@color/white"
            android:text="@string/next_knowledge"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/course1LayoutPracticeRl"
        android:layout_width="150px"
        android:layout_height="30px"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40px"
        android:background="@drawable/left_text_bg"
        >
        <TextView
            android:id="@+id/course1LayoutPracticeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/go_practice"
            android:layout_marginLeft="6px"
            android:textSize="16px"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/course_next"
            android:layout_marginLeft="9px"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/course1LayoutPracticeTextView"
            />
    </RelativeLayout>
</RelativeLayout>