<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/practice_title_layout"
        />

    <RelativeLayout
        android:id="@+id/practice1LayoutPracticeRl"
        android:layout_width="150px"
        android:layout_height="30px"
        android:layout_marginTop="370px"
        android:background="@drawable/textview_bg"
        >
        <ImageView
            android:id="@+id/practice1LayoutPracticeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return_knowledge"
            android:layout_marginLeft="6px"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/return_knowledge_point"
            android:layout_toRightOf="@id/practice1LayoutPracticeImageView"
            android:layout_marginLeft="16px"
            android:textSize="16px"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/practice1LayoutPracticeTextView"
        android:layout_width="84px"
        android:layout_height="30px"
        android:background="@drawable/textview_green_bg"
        android:text="@string/Prompt"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16px"
        android:layout_marginTop="370px"
        android:layout_marginLeft="297px"
        />
    <TextView
        android:id="@+id/practice1LayoutOkTextView"
        android:layout_width="156px"
        android:layout_height="54px"
        android:textColor="@color/white"
        android:textSize="24px"
        android:layout_marginTop="346px"
        android:layout_marginLeft="434px"
        android:gravity="center"
        android:text="@string/Confirm"
        android:background="@drawable/textview_bg"
        />

    <HorizontalScrollView
        android:id="@+id/practiceHorizontalScrollView"
        android:layout_alignParentBottom="true"
        android:scrollbars="none"
        android:layout_width="3550px"
        android:layout_height="170px">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <com.weiyin.qinplus.ui.tv.waterfall.PracticeKeyBoard
                android:id="@+id/scrollViewKeyBoard"
                android:layout_width="3550px"
                android:layout_height="match_parent" />

        </LinearLayout>
    </HorizontalScrollView>
    <com.weiyin.qinplus.ui.tv.waterfall.PracticeKeyBoard
        android:id="@+id/practiceKeyBoard"
        android:layout_above="@id/practiceHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="61px" />
    <RelativeLayout
        android:id="@+id/practice2RelativeLayout"
        android:layout_width="match_parent"
        android:layout_above="@id/practiceHorizontalScrollView"
        android:layout_height="61px">
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="0dp"
            android:layout_height="61px"
            android:background="@color/atransparent"
            />
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="0dp"
            android:layout_height="61px"
            android:layout_alignParentRight="true"
            android:background="@color/atransparent"
            />
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="295px"
            android:layout_height="61px"
            android:background="@color/select_o"
            />
    </RelativeLayout>

</RelativeLayout>